[package]
name = "br-punch-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netstat = "0.7.0"
sysinfo = "0.18.2"
dirs = "3.0.2"
regex = "1.5.4"
reqwest = { version = "0.11.3", features = ["blocking"] }
sha1 = "0.6.0"
